--- a/src/App.css
+++ b/src/App.css
@@ -48,11 +48,30 @@
   color: #000000;
   font-size: 100px;
 }
-.tracker {
+.tracker-old {
   /*background-image: url('/images/g7logo3.jpg');*/
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FBFCEB;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: #000000;
-  font-size: 100px;
+  padding: 10px;
+  font-size: 50px;
 }
+
+/*.tracker {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  object-fit: contain;
+  background-color: #FBFCEB;
+  color: #000000;
+  padding: 10px;
+  font-size: 50px;
+}*/
