--- a/src/components/styles/EmployeePageCards.css
+++ b/src/components/styles/EmployeePageCards.css
@@ -1,19 +1,19 @@
 /* Menu Item Card CSS */
-.menucard {
-  display: flex;
-  flex-direction: column;
+.orderCard {
+  /*display: flex;*
+  flex-direction: column;*/
   /*height: inherit;*/
   background-color: white;
   color: white;
   margin:5px;
-  width:100%;
-  height: 200px;
+  width:270px;
+  height: 220px;
   position: relative;
   padding:5px
 }
 
   /* DATE, LOCATION, ETC */
-.menuDetails {
+.orderDetails {
   text-align: left;
   color: black;
   font-size: 15.5px;
@@ -22,7 +22,7 @@
   line-height: .2em;
 }
 
-.menuBack {
+.orderBack {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -32,7 +32,7 @@
   padding: .3rem;
   overflow: scroll;
 }
-.menuTitle {
+.orderTitle {
   text-align: center;
   color: black;
   font-size: 20px;
@@ -40,36 +40,23 @@
   padding: 5px;
   line-height: normal;
 }
-.menuDescription {
-  text-align: center;
+.orderDescription {
+  text-align: left;
   color: black;
   font-size: 15.5px;
   font-family: "Avenir Next";
   padding: 5px;
   line-height: normal;
 }
-.menucard button{
+.orderCard button{
   border: none;
   outline: 0;
-  padding: 12px;
+  padding: 5px;
   color: white;
   background-color: #000;
-  text-align: center;
+  text-align: left;
   cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-}
-.menuButton {
-  border: none;
-  outline: 0;
-  padding: 12px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-}
-.menucard button:hover {
-  opacity: 0.7;
+  width: 25%;
+  font-size: 14px;
+  margin:5px;
 }
