--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -54,15 +54,19 @@ img {
   .hero-container > h1 {
     font-size: 50px;
     margin-top: -100px;
+    margin-left: 15px;
   }
 
   .hero-container > p {
     font-size: 30px;
+    margin-left: 15px;
   }
 
   .btn-mobile {
     display: block;
     text-decoration: none;
+    margin-right: 25px;
+    margin-left: 15px;
   }
 
   .btn {
