--- a/src/components/styles/Menu.css
+++ b/src/components/styles/Menu.css
@@ -1,19 +1,21 @@
 .wrapper {
   display: flex;
-  /*flex-direction: row;*/
+  flex-direction: row;
   flex-wrap: wrap;
-  height: 500px;
+  height: 700px;
+  /*height: 100%;*/
+  overflow-y: scroll;
 }
 .side{
   flex: 30%;
-  background-color: #f1f1f1;
+  background-color: #FBFCEB;
   padding: 20px;
 
 }
 /* Main column */
 .main {
   flex: 70%;
-  background-color: pink;
+  background-color: #DFE9AC;
   padding: 20px;
 }
 /* Float four columns side by side */
@@ -51,13 +53,42 @@
   padding: 20px;
   height: 200px;
 }
-
-/* Create two equal columns that floats next to each other */
-/*.column {
-  flex:1;
-  flex-direction: "row";
+/* Style the tab */
+.tab {
   float: left;
-  width: 50%;
-  padding: 10px;
+  border: 5px solid #FBFCEB;
+  background-color: #DFE9AC;
+  width: 100%;
   height: 300px;
-}*/
+}
+/* Style the buttons inside the tab */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 17px;
+}
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #FBFCEB;
+}
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #FBFCEB;
+}
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  border: 1px solid #FBFCEB;
+  width: 70%;
+  border-left: none;
+  height: 300px;
+}
