--- a/src/App.css
+++ b/src/App.css
@@ -8,31 +8,15 @@
 .home,
 .menu,
 .cart,
-.login,
-.tracker {
+.login {
 
 }
-
-/*.menu {
-  /*display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
-  background-image: url('/images/header-1.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #000000;
-  font-size: 100px;
-}*/
 
 .cart {
   display: flex;
   height: 90vh;
   align-items: center;
   justify-content: center;
-  /*background-image: url('/images/header-1.jpg');*/
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -48,30 +32,3 @@
   color: #000000;
   font-size: 100px;
 }
-.tracker-old {
-  /*background-image: url('/images/g7logo3.jpg');*/
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #FBFCEB;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #000000;
-  padding: 10px;
-  font-size: 50px;
-}
-
-/*.tracker {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  object-fit: contain;
-  background-color: #FBFCEB;
-  color: #000000;
-  padding: 10px;
-  font-size: 50px;
-}*/
